# simple_api/cmd/main.go
@@ -2,8 +2,10 @@ package main
 
 import (
 	_ "users/docs" // ให้ Swag สร้างเอกสารใน Folder docs โดยอัตโนมัติ
+	"users/middleware"
 
 	"log"
+	"users/internal/config"
 	"users/internal/handler"
 	"users/internal/user"
 
@@ -17,7 +19,14 @@ import (
 // @description     This is a simple example of using Gin with Swagger.
 // @host            localhost:8080
 // @BasePath        /
+
+// @securityDefinitions.apikey BearerAuth
+// @in header
+// @name Authorization
+
 func main() {
+	cfg := config.LoadConfig()
+
 	db := user.InitDB("localhost", "5432", "postgres", "postgres123", "postgres")
 	defer db.Close()
 
@@ -26,16 +35,17 @@ func main() {
 	// Swagger endpoint
 	r.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.GET("/health", handler.HealthCheck(db))
+
 	// User API routes
-	api := r.Group("/api/v1")
+	authRequired := r.Group("/api/v1", middleware.BearerAuth(cfg.APIToken))
 	{
-		// api.GET("/users/:id", handler.GetUserByID) // ใช้ Handler จากไฟล์ user_handler.go
-		api.PUT("/users/:id", handler.UpdateUserHandler(db))
-		api.DELETE("/users/:id", handler.DeleteUserHandler(db))
-		api.POST("/users", handler.AddUserHandler(db))
-		api.GET("/users", handler.GetAllUsersHandler(db))
-		api.GET("/users/:id", handler.GetUserByID(db))
-	}	
+		// @Security BearerAuth
+		authRequired.PUT("/users/:id", handler.UpdateUserHandler(db))
+		authRequired.DELETE("/users/:id", handler.DeleteUserHandler(db))
+		authRequired.POST("/users", handler.AddUserHandler(db))
+		authRequired.GET("/users", handler.GetAllUsersHandler(db))
+		authRequired.GET("/users/:id", handler.GetUserByID(db))
+	}
 
 	// Start server
 	if err := r.Run(":8080"); err != nil {
